src/ic11/generated/Ic11Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Ic11.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class Ic11Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, PINID=15, WHILE=16, FOR=17, 
		IF=18, ELSE=19, YIELD=20, HCF=21, SLEEP=22, RETURN=23, CONTINUE=24, BREAK=25, 
		BASE_DEVICE=26, VAR=27, CONST=28, ADD=29, SUB=30, MUL=31, DIV=32, MOD=33, 
		BITWISE_NOT=34, SHIFTL=35, SHIFTR=36, SHIFTLA=37, SHIFTRA=38, LT=39, GT=40, 
		LE=41, GE=42, AND=43, OR=44, XOR=45, EQ=46, NE=47, AEQ=48, ANE=49, SEL=50, 
		NEGATION=51, PINS=52, SLOTS=53, REAGENTS=54, STACK=55, CLEAR=56, DEVICE_WITH_ID=57, 
		DEVICES_OF_TYPE=58, WITH_NAME=59, DIRECT_NULLARY_OPERATOR=60, DIRECT_UNARY_OPERATOR=61, 
		DIRECT_BINARY_OPERATOR=62, DIRECT_TERNARY_OPERATOR=63, BOOLEAN=64, IDENTIFIER=65, 
		INTEGER=66, INTEGER_HEX=67, INTEGER_BINARY=68, HASH_LITERAL=69, STRING_LITERAL=70, 
		REAL=71, WS=72, LINE_COMMENT=73, MULTILINE_COMMENT=74;
	public const int
		RULE_program = 0, RULE_declaration = 1, RULE_function = 2, RULE_block = 3, 
		RULE_statement = 4, RULE_delimetedStatmentWithDelimiter = 5, RULE_delimitedStatement = 6, 
		RULE_yieldStatement = 7, RULE_hcfStatement = 8, RULE_sleepStatement = 9, 
		RULE_returnStatement = 10, RULE_returnValueStatement = 11, RULE_continueStatement = 12, 
		RULE_breakStatement = 13, RULE_functionCallStatement = 14, RULE_undelimitedStatement = 15, 
		RULE_whileStatement = 16, RULE_forStatement = 17, RULE_ifStatement = 18, 
		RULE_batchAssignment = 19, RULE_deviceAssignment = 20, RULE_deviceExtendedAssignment = 21, 
		RULE_deviceStackClear = 22, RULE_device = 23, RULE_assignment = 24, RULE_variableDeclaration = 25, 
		RULE_constantDeclaration = 26, RULE_arrayDeclaration = 27, RULE_arrayAssignment = 28, 
		RULE_expression = 29;
	public static readonly string[] ruleNames = {
		"program", "declaration", "function", "block", "statement", "delimetedStatmentWithDelimiter", 
		"delimitedStatement", "yieldStatement", "hcfStatement", "sleepStatement", 
		"returnStatement", "returnValueStatement", "continueStatement", "breakStatement", 
		"functionCallStatement", "undelimitedStatement", "whileStatement", "forStatement", 
		"ifStatement", "batchAssignment", "deviceAssignment", "deviceExtendedAssignment", 
		"deviceStackClear", "device", "assignment", "variableDeclaration", "constantDeclaration", 
		"arrayDeclaration", "arrayAssignment", "expression"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'pin'", "'void'", "'real'", "'('", "','", "')'", "'{'", 
		"'}'", "'.'", "'['", "']'", "'='", "':'", null, "'while'", "'for'", "'if'", 
		"'else'", "'yield'", "'hcf'", "'sleep'", "'return'", "'continue'", "'break'", 
		"'Base'", "'var'", "'const'", "'+'", "'-'", "'*'", "'/'", "'%'", "'~'", 
		null, null, "'<<a'", "'>>a'", "'<'", "'>'", "'<='", "'>='", "'&'", "'|'", 
		"'^'", "'=='", "'!='", null, "'~!='", "'?'", "'!'", "'Pins'", "'Slots'", 
		"'Reagent'", "'Stack'", "'Clear'", "'DeviceWithId'", "'DevicesOfType'", 
		"'WithName'", "'rand'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "PINID", "WHILE", "FOR", "IF", "ELSE", "YIELD", "HCF", 
		"SLEEP", "RETURN", "CONTINUE", "BREAK", "BASE_DEVICE", "VAR", "CONST", 
		"ADD", "SUB", "MUL", "DIV", "MOD", "BITWISE_NOT", "SHIFTL", "SHIFTR", 
		"SHIFTLA", "SHIFTRA", "LT", "GT", "LE", "GE", "AND", "OR", "XOR", "EQ", 
		"NE", "AEQ", "ANE", "SEL", "NEGATION", "PINS", "SLOTS", "REAGENTS", "STACK", 
		"CLEAR", "DEVICE_WITH_ID", "DEVICES_OF_TYPE", "WITH_NAME", "DIRECT_NULLARY_OPERATOR", 
		"DIRECT_UNARY_OPERATOR", "DIRECT_BINARY_OPERATOR", "DIRECT_TERNARY_OPERATOR", 
		"BOOLEAN", "IDENTIFIER", "INTEGER", "INTEGER_HEX", "INTEGER_BINARY", "HASH_LITERAL", 
		"STRING_LITERAL", "REAL", "WS", "LINE_COMMENT", "MULTILINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Ic11.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static Ic11Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public Ic11Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public Ic11Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(Ic11Parser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionContext[] function() {
			return GetRuleContexts<FunctionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionContext function(int i) {
			return GetRuleContext<FunctionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDeclarationContext[] constantDeclaration() {
			return GetRuleContexts<ConstantDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDeclarationContext constantDeclaration(int i) {
			return GetRuleContext<ConstantDeclarationContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIc11Visitor<TResult> typedVisitor = visitor as IIc11Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 268435484L) != 0)) {
				{
				State = 65;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__1:
					{
					State = 60;
					declaration();
					}
					break;
				case CONST:
					{
					{
					State = 61;
					constantDeclaration();
					State = 62;
					Match(T__0);
					}
					}
					break;
				case T__2:
				case T__3:
					{
					State = 64;
					function();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 70;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(Ic11Parser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PINID() { return GetToken(Ic11Parser.PINID, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIc11Visitor<TResult> typedVisitor = visitor as IIc11Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			Match(T__1);
			State = 73;
			Match(IDENTIFIER);
			State = 74;
			Match(PINID);
			State = 75;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionContext : ParserRuleContext {
		public IToken retType;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(Ic11Parser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(Ic11Parser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIc11Visitor<TResult> typedVisitor = visitor as IIc11Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(Context, State);
		EnterRule(_localctx, 4, RULE_function);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			_localctx.retType = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !(_la==T__2 || _la==T__3) ) {
				_localctx.retType = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 78;
			Match(IDENTIFIER);
			State = 79;
			Match(T__4);
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENTIFIER) {
				{
				State = 80;
				Match(IDENTIFIER);
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__5) {
					{
					{
					State = 81;
					Match(T__5);
					State = 82;
					Match(IDENTIFIER);
					}
					}
					State = 87;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 90;
			Match(T__6);
			State = 91;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIc11Visitor<TResult> typedVisitor = visitor as IIc11Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			Match(T__7);
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((((_la - 16)) & ~0x3f) == 0 && ((1L << (_la - 16)) & 569615742672887L) != 0)) {
				{
				{
				State = 94;
				statement();
				}
				}
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 100;
			Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DelimetedStatmentWithDelimiterContext delimetedStatmentWithDelimiter() {
			return GetRuleContext<DelimetedStatmentWithDelimiterContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UndelimitedStatementContext undelimitedStatement() {
			return GetRuleContext<UndelimitedStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIc11Visitor<TResult> typedVisitor = visitor as IIc11Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_statement);
		try {
			State = 104;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case YIELD:
			case HCF:
			case SLEEP:
			case RETURN:
			case CONTINUE:
			case BREAK:
			case BASE_DEVICE:
			case VAR:
			case CONST:
			case PINS:
			case DEVICE_WITH_ID:
			case DEVICES_OF_TYPE:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 102;
				delimetedStatmentWithDelimiter();
				}
				break;
			case WHILE:
			case FOR:
			case IF:
				EnterOuterAlt(_localctx, 2);
				{
				State = 103;
				undelimitedStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DelimetedStatmentWithDelimiterContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DelimitedStatementContext delimitedStatement() {
			return GetRuleContext<DelimitedStatementContext>(0);
		}
		public DelimetedStatmentWithDelimiterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_delimetedStatmentWithDelimiter; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.EnterDelimetedStatmentWithDelimiter(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.ExitDelimetedStatmentWithDelimiter(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIc11Visitor<TResult> typedVisitor = visitor as IIc11Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDelimetedStatmentWithDelimiter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DelimetedStatmentWithDelimiterContext delimetedStatmentWithDelimiter() {
		DelimetedStatmentWithDelimiterContext _localctx = new DelimetedStatmentWithDelimiterContext(Context, State);
		EnterRule(_localctx, 10, RULE_delimetedStatmentWithDelimiter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			delimitedStatement();
			State = 107;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DelimitedStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeviceStackClearContext deviceStackClear() {
			return GetRuleContext<DeviceStackClearContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeviceExtendedAssignmentContext deviceExtendedAssignment() {
			return GetRuleContext<DeviceExtendedAssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeviceAssignmentContext deviceAssignment() {
			return GetRuleContext<DeviceAssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BatchAssignmentContext batchAssignment() {
			return GetRuleContext<BatchAssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public YieldStatementContext yieldStatement() {
			return GetRuleContext<YieldStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HcfStatementContext hcfStatement() {
			return GetRuleContext<HcfStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SleepStatementContext sleepStatement() {
			return GetRuleContext<SleepStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnValueStatementContext returnValueStatement() {
			return GetRuleContext<ReturnValueStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContinueStatementContext continueStatement() {
			return GetRuleContext<ContinueStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BreakStatementContext breakStatement() {
			return GetRuleContext<BreakStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationContext variableDeclaration() {
			return GetRuleContext<VariableDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDeclarationContext constantDeclaration() {
			return GetRuleContext<ConstantDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionCallStatementContext functionCallStatement() {
			return GetRuleContext<FunctionCallStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArrayDeclarationContext arrayDeclaration() {
			return GetRuleContext<ArrayDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArrayAssignmentContext arrayAssignment() {
			return GetRuleContext<ArrayAssignmentContext>(0);
		}
		public DelimitedStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_delimitedStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.EnterDelimitedStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIc11Listener typedListener = listener as IIc11Listener;
			if (typedListener != null) typedListener.ExitDelimitedStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIc11Visitor<TResult> typedVisitor = visitor as IIc11Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDelimitedStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
